complete main job

--- a/package.json
+++ b/package.json
@@ -1,61 +1,103 @@
 {
-  "name": "custom-html",
+  "name": "advanced-custom-html",
   "version": "1.0.0",
-  "description": "Write code like editor like editor.",
-  "main": "index.js",
+  "description": "A powerful 360 panorama viewer with Gutenberg block and Elementor addon support",
+  "author": "WP Shopify Expert",
+  "license": "GPL-2.0-or-later",
   "scripts": {
-    "lint": "eslint src",
-    "start": "webpack --mode=development --watch",
-    "sync": "browser-sync start -p 'http://development/local/' --files '**/*.php' 'dist/*.js' 'dist/*.css'",
-    "preview": "npm-run-all --parallel sync start",
-    "i18n-pot": "wp i18n make-pot . languages/custom-html.pot --exclude=\"src\" && cp ./languages/custom-html.pot ./languages/custom-html-en_US.po",
-    "i18n-json": "wp i18n make-json languages/ --no-purge",
-    "i18n-mo": "wp i18n make-mo languages/",
+    "build": "wp-scripts build",
+    "start": "wp-scripts start",
+    "check-engines": "wp-scripts check-engines",
+    "check-licenses": "wp-scripts check-licenses",
+    "format": "wp-scripts format",
+    "lint:css": "wp-scripts lint-style",
+    "lint:js": "wp-scripts lint-js",
+    "lint:md:docs": "wp-scripts lint-md-docs",
+    "lint:pkg-json": "wp-scripts lint-pkg-json",
+    "packages-update": "wp-scripts packages-update",
+    "plugin-zip": "wp-scripts plugin-zip",
+    "test:e2e": "wp-scripts test-e2e",
+    "test:unit": "wp-scripts test-unit-js",
+    "i18n-pot": "wp i18n make-pot . i18n/pdfp.pot --exclude=\"src, node_modules, pdfjs\" && cp ./i18n/pdfp.pot ./i18n/pdfp-en_US.po",
+    "i18n-json": "wp i18n make-json i18n/ --no-purge",
+    "i18n-mo": "wp i18n make-mo i18n/",
     "i18n": "npm run i18n-pot && npm run i18n-json && npm run i18n-mo",
-    "build": "gulp clean && npm run lint && webpack --mode=production && npm run i18n && gulp bundle"
+    "bundle": "wp-scripts build && npm run i18n && gulp bundle && gulp plugin_zip"
   },
-  "author": "Wasek Bellah",
-  "license": "ISC",
-  "dependencies": {},
+  "files": [
+    "lib",
+    "assets",
+    "build",
+    "includes",
+    "advanced-panorama-360-viewer.php",
+    "vendor/composer",
+    "vendor/bin",
+    "vendor/autoload.php",
+    "!package.json",
+    "readme.txt"
+  ],
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.9",
-    "@babel/preset-react": "^7.14.5",
-    "@wordpress/blob": "^2.13.2",
-    "@wordpress/block-editor": "^5.3.3",
-    "@wordpress/blocks": "^7.0.6",
-    "@wordpress/components": "^12.0.8",
-    "@wordpress/compose": "^3.25.3",
-    "@wordpress/data": "^4.27.3",
-    "@wordpress/element": "^2.20.3",
-    "@wordpress/html-entities": "^2.11.2",
-    "@wordpress/i18n": "^3.20.0",
-    "@wordpress/rich-text": "^3.25.3",
-    "autoprefixer": "^10.3.1",
-    "babel-loader": "^8.2.2",
-    "browser-sync": "^2.27.9",
-    "browserslist": "^4.16.7",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.2.7",
-    "eslint": "^7.32.0",
-    "eslint-config-node": "^4.1.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "eslint-webpack-plugin": "^2.5.4",
-    "file-loader": "^6.2.0",
-    "gulp": "^4.0.2",
-    "gulp-zip": "^5.1.0",
-    "mini-css-extract-plugin": "^1.6.2",
-    "node-sass": "^5.0.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^11.1.1",
-    "webpack": "^5.71.0",
-    "webpack-cli": "^4.7.2"
+    "@wordpress/scripts": "^26.0.0",
+    "eslint-webpack-plugin": "^4.2.0",
+    "gulp": "^5.0.0",
+    "gulp-zip": "^6.0.0"
   },
-  "browserslist": [
-    "> 1% or last 5 versions"
-  ]
+  "dependencies": {
+    "@codemirror/commands": "^6.7.0",
+    "@codemirror/gutter": "^0.19.9",
+    "@codemirror/lang-css": "^6.3.0",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-php": "^6.0.1",
+    "@codemirror/lang-python": "^6.1.6",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.34.1",
+    "@uiw/codemirror-extensions-basic-setup": "^4.23.5",
+    "@uiw/codemirror-theme-abcdef": "^4.23.5",
+    "@uiw/codemirror-theme-abyss": "^4.23.5",
+    "@uiw/codemirror-theme-androidstudio": "^4.23.5",
+    "@uiw/codemirror-theme-andromeda": "^4.23.5",
+    "@uiw/codemirror-theme-atomone": "^4.23.5",
+    "@uiw/codemirror-theme-aura": "^4.23.5",
+    "@uiw/codemirror-theme-basic": "^4.23.5",
+    "@uiw/codemirror-theme-bbedit": "^4.23.5",
+    "@uiw/codemirror-theme-bespin": "^4.23.5",
+    "@uiw/codemirror-theme-console": "^4.23.5",
+    "@uiw/codemirror-theme-copilot": "^4.23.5",
+    "@uiw/codemirror-theme-darcula": "^4.23.5",
+    "@uiw/codemirror-theme-dracula": "^4.23.5",
+    "@uiw/codemirror-theme-duotone": "^4.23.5",
+    "@uiw/codemirror-theme-eclipse": "^4.23.5",
+    "@uiw/codemirror-theme-github": "^4.23.5",
+    "@uiw/codemirror-theme-gruvbox-dark": "^4.23.5",
+    "@uiw/codemirror-theme-kimbie": "^4.23.5",
+    "@uiw/codemirror-theme-material": "^4.23.5",
+    "@uiw/codemirror-theme-monokai": "^4.23.5",
+    "@uiw/codemirror-theme-monokai-dimmed": "^4.23.5",
+    "@uiw/codemirror-theme-noctis-lilac": "^4.23.5",
+    "@uiw/codemirror-theme-nord": "^4.23.5",
+    "@uiw/codemirror-theme-okaidia": "^4.23.5",
+    "@uiw/codemirror-theme-quietlight": "^4.23.5",
+    "@uiw/codemirror-theme-red": "^4.23.5",
+    "@uiw/codemirror-theme-solarized": "^4.23.5",
+    "@uiw/codemirror-theme-sublime": "^4.23.5",
+    "@uiw/codemirror-theme-tokyo-night": "^4.23.5",
+    "@uiw/codemirror-theme-tokyo-night-day": "^4.23.5",
+    "@uiw/codemirror-theme-tokyo-night-storm": "^4.23.5",
+    "@uiw/codemirror-theme-tomorrow-night-blue": "^4.23.5",
+    "@uiw/codemirror-theme-vscode": "^4.23.5",
+    "@uiw/codemirror-theme-white": "^4.23.5",
+    "@uiw/codemirror-theme-xcode": "^4.23.5",
+    "@uiw/react-codemirror": "^4.23.5",
+    "@wordpress/block-editor": "^11.8.0",
+    "@wordpress/blocks": "^12.0.0",
+    "@wordpress/components": "^23.9.0",
+    "@wordpress/data": "^10.10.0",
+    "@wordpress/i18n": "^4.0.0",
+    "codemirror": "^6.0.1",
+    "immer": "^10.1.1",
+    "react-draggable": "^4.4.6"
+  }
 }
