--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@wordpress/i18n": "^4.0.0",
     "codemirror": "^6.0.1",
     "immer": "^10.1.1",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.3.0"
   }
 }
